--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,13 +3,13 @@
     padding: 0;
     margin: 0;
 }
-/* @font-face {
+@font-face {
     font-family: 'Helvetica neue';
-    src: url(public/font/Helvetica-neue.otf);
+    src: url(/public/font/Helvetica-neue.otf);
     font-display: swap;
-} */
+} 
 body{
-    /* font-family: var(--helvetica-font); */
+    font-family: var(--helvetica-font); 
 }
 :root{
     --main-color: rgb(9, 4, 89);
@@ -24,25 +24,31 @@ ul{
 }
 a{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 900;
+    letter-spacing: 1px;
     text-transform: uppercase;
     text-decoration: none;
     color: #000;
 }
 p{
     font-size: 17px;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
 h1{
-    font-size: 35px;
-    font-weight: 700;
+    font-size: 50px;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
 h2{
     font-size: 25px;
-    font-weight: 700;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
 h3{
     font: 18px;
-    font-weight: 700;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
 
 /* 
@@ -132,4 +138,62 @@ header{
     .menu-listm{
         display: flex;
     }
+}
+
+
+
+/* 
+===================
+===========  Slider ================
+===================
+*/
+
+.slider{
+    width: 100%;
+    height: 700px;
+    background: url(/public/img/slider/home\ \(3\).webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+    position: relative;
+    color: #fff;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.slider::before{
+    content: '';
+    z-index: -1;
+    position: absolute;
+    top: 0;right: 0;left: 0;bottom: 0;
+    background: rgba(0,0,0, .4);
+}
+
+.slider-text{
+    padding-left: 100px;
+    width: 60%;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+.slider-text button{
+    background: var(--main-color);
+    color: #fff;
+    font-size: 20px;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    transition: .3s all;
+    border: 2px solid transparent;
+}
+.slider-text button:hover{
+    background: #fff;
+    color: var(--main-color);
+    border: 2px solid #000;
+}
+
+
+.a-icons{
+    width: 100px;
 }
