--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,19 +36,28 @@ p{
     letter-spacing: 1px;
 }
 h1{
-    font-size: 50px;
+    font-size: calc(30px + 2vw);
     font-weight: 900;
     letter-spacing: 1px;
+    text-transform: uppercase;
 }
 h2{
-    font-size: 25px;
+    font-size: calc(18px + 2vw);
     font-weight: 900;
     letter-spacing: 1px;
+    text-transform: uppercase;
 }
 h3{
-    font: 18px;
+    font-size: calc(13px + 1vw);
     font-weight: 900;
     letter-spacing: 1px;
+    text-transform: uppercase;
+}
+h4{
+    font-size: calc(12px + .5vw);
+    font-weight: 900;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 /* 
@@ -193,7 +202,196 @@ header{
     border: 2px solid #000;
 }
 
+@media screen and (max-width: 1025px) {
+    .slider-text{
+        width: 95%;
+        margin: 0 auto;
+        padding-left: 0px;
+    }
+}
 
+
+/* 
+===================
+===========  About Company ================
+===================
+*/
+
+.about-company{
+    width: 100%;
+    height: auto;
+    padding: 4rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 500px);
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+
+.img-company{
+    background-image: url(/public/img/slider/home\ \(3\).webp);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    width: calc(400px + 10vw);
+    height: 450px;
+}
+.border-line{
+    margin: 0 auto;
+    align-self: center;
+    justify-self: center;
+    width: 97%;
+    height: 97%;
+    border: 1.5px solid #fff;
+}
+
+.about-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 450px;
+}
+.info-text{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    line-height: 25px;
+}
+.info-text h2 span{
+    color: var(--main-color);
+}
+.about-icons{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 100px);
+    justify-content: center;
+    gap: 30px;
+}
 .a-icons{
     width: 100px;
+}
+
+@media screen and (max-width: 1025px) {
+    .img-company{
+        width: 100%;
+        height: 500px;
+    }    
+    .about-company{
+        grid-template-columns: repeat(auto-fill, 100%);
+        padding: 1.5rem .5rem;
+        gap: 30px;
+    }
+    .border-line{
+        width: 97.5%;
+        height: 95%;
+    }
+    .info-text{
+        margin: 0 auto;
+        text-align: center;
+        width: 99%;
+    }
+    .about-info{
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+    }
+}
+
+
+
+/* 
+===================
+===========  About Company ================
+===================
+*/
+
+.our-services{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 25vw));
+    justify-content: center;
+    gap: 50px;
+    row-gap: 40px;
+    background: #000;
+    padding: 4rem 0;
+}
+.card{
+    text-align: center;
+    background: #fff;
+    height: 400px;
+}
+.card-text{
+    padding: 1rem 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+.card button{
+    background: var(--main-color);
+    color: #fff;
+    font-size: 20px;
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    transition: .3s all;
+    border: 2px solid transparent;
+}
+.card button:hover{
+    background: #fff;
+    color: var(--main-color);
+    border: 2px solid #000;
+}
+
+
+
+/* 
+===================
+===========  About Company ================
+===================
+*/
+
+
+.latest-project{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 4rem 0;
+}
+.latest-header{
+    width: 100%;
+    text-align: center;
+}
+.latest-grid-2,
+.latest-grid-1{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.latest-grid-1{
+    grid-template-columns: repeat(auto-fill, 31vw);
+}
+.latest-grid-2{
+    grid-template-columns: repeat(auto-fill, 22vw);
+}
+
+@media screen and (max-width: 900px) {
+    .latest-grid-1{
+        grid-template-columns: repeat(auto-fill, 200px);
+    }
+    .latest-grid-2{
+        grid-template-columns: repeat(auto-fill, 300px);
+    }
+}
+@media screen and (max-width: 650px) {
+    .latest-grid-1{
+        grid-template-columns: repeat(auto-fill, 90%);
+    }
+    .latest-grid-2{
+        grid-template-columns: repeat(auto-fill, 90%);
+    }
 }
