--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,8 +12,11 @@ body{
     font-family: var(--helvetica-font); 
 }
 :root{
-    --main-color: rgb(9, 4, 89);
-    --helvetica-font: 'Helvetica neue'
+    --helvetica-font: 'Helvetica neue';
+    --color-blue:#1f0af4;
+    --color-violet:#8a7ff9;
+    --color-dark-blue:rgb(12, 4, 92);
+    --color-medium-blue:#130692;
 }
 img{
     width: 100%;
@@ -36,19 +39,19 @@ p{
     letter-spacing: 1px;
 }
 h1{
-    font-size: calc(30px + 2vw);
+    font-size: clamp( 35px, 7vw, 7vh);
     font-weight: 900;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 h2{
-    font-size: calc(18px + 2vw);
+    font-size: clamp( 25px, 5vw, 5vh);
     font-weight: 900;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 h3{
-    font-size: calc(13px + 1vw);
+    font-size: clamp( 18px, 2.5vw, 2.5vh);
     font-weight: 900;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -186,8 +189,8 @@ header{
     gap: 10px;
     flex-direction: column;
 }
-.slider-text button{
-    background: var(--main-color);
+button{
+    background: var(--color-medium-blue);
     color: #fff;
     font-size: 20px;
     width: 150px;
@@ -196,9 +199,9 @@ header{
     transition: .3s all;
     border: 2px solid transparent;
 }
-.slider-text button:hover{
+button:hover{
     background: #fff;
-    color: var(--main-color);
+    color: var(--color-medium-blue);
     border: 2px solid #000;
 }
 
@@ -260,7 +263,7 @@ header{
     line-height: 25px;
 }
 .info-text h2 span{
-    color: var(--main-color);
+    color: var(--color-medium-blue);
 }
 .about-icons{
     width: 100%;
@@ -307,9 +310,24 @@ header{
 ===================
 */
 
+.services{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 4rem 0;
+    background: #000;
+}
+.services-header{
+    background: #000;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+}
 .our-services{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 25vw));
+    grid-template-columns: repeat(auto-fit, minmax(270px, 25vw));
     justify-content: center;
     gap: 50px;
     row-gap: 40px;
@@ -319,17 +337,18 @@ header{
 .card{
     text-align: center;
     background: #fff;
-    height: 400px;
+    height: auto;
+    width: 100%;
 }
 .card-text{
-    padding: 1rem 8px;
+    padding: 1.5rem 8px 2rem 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 15px;
 }
 .card button{
-    background: var(--main-color);
+    background: var(--color-medium-blue);
     color: #fff;
     font-size: 20px;
     width: 150px;
@@ -340,7 +359,7 @@ header{
 }
 .card button:hover{
     background: #fff;
-    color: var(--main-color);
+    color: var(--color-medium-blue);
     border: 2px solid #000;
 }
 
@@ -348,7 +367,7 @@ header{
 
 /* 
 ===================
-===========  About Company ================
+===========  Lastest Project ================
 ===================
 */
 
@@ -394,4 +413,135 @@ header{
     .latest-grid-2{
         grid-template-columns: repeat(auto-fill, 90%);
     }
+}
+
+
+
+
+
+
+/* 
+===================
+===========  Our Team ================
+===================
+*/
+
+
+.our-team{
+    height: 100%;
+    width: 100%;
+    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.our-header{
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding: 0 5px;
+}
+.our-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    gap: 20px;
+    row-gap: 50px;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.team-card{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+}
+.team-header{
+    background: var(--color-medium-blue);
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 1rem;
+}
+.team-img{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.team-img img{
+    transition: .3s all;
+}
+.team-img:hover img{
+    scale: 1.15;
+    transform: rotate(-10deg);
+}
+
+
+
+
+/* 
+===================
+===========  Contact us ================
+===================
+*/
+
+
+.contact-us{
+    width: 100%;
+    height: 100%;
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 50px;
+    background: #000;
+    color: #fff;
+}
+.contact-abt{
+    padding: 0;
+}
+.contact-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    gap: 20px;
+}
+.contact-text h1{
+    font-size: clamp(25px, 6vw, 6vh);
+    line-height: 25px;
+}
+.contact-text h1 span{
+    font-size: clamp(16px, 2.5vw, 2.5vh);
+    vertical-align: middle;
+}
+
+
+
+
+/* 
+===================
+===========  Our Team ================
+===================
+*/
+
+.footer{
+    display: flex;
+    padding: 1.5rem 1rem;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer a{
+    text-transform: capitalize;
+}
+.footer a span{
+    color: var(--color-medium-blue);
 }
